--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Deploy via SSH
       uses: appleboy/ssh-action@v0.1.7
       with:
-        host: your.vps.ip.or.domain
+        host: ${{ secrets.VPS_IP_ADDRESS }}
         username: root  
         key: ${{ secrets.VPS_SSH_KEY }}
         port: 22
