--- a/package.json
+++ b/package.json
@@ -10,15 +10,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
+    "@tailwindcss/typography": "^0.5.19",
+    "@tiptap/extension-color": "^3.8.0",
+    "@tiptap/extension-heading": "^3.8.0",
+    "@tiptap/extension-image": "^3.8.0",
+    "@tiptap/extension-link": "^3.8.0",
+    "@tiptap/extension-text-style": "^3.8.0",
+    "@tiptap/react": "^3.8.0",
+    "@tiptap/starter-kit": "^3.8.0",
+    "axios": "^1.12.2",
+    "dompurify": "^3.3.0",
     "lucide-react": "^0.344.0",
+    "mongoose-paginate-v2": "^1.9.1",
+    "paystack": "^2.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.9.4"
+    "react-player": "^3.3.3",
+    "react-router-dom": "^7.9.4",
+    "video.js": "^8.23.4",
+    "videojs-youtube": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/dompurify": "^3.0.5",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/video.js": "^7.3.58",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
