--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/typography": "^0.5.19",
     "@tiptap/extension-color": "^3.8.0",
@@ -21,6 +22,7 @@
     "@tiptap/react": "^3.8.0",
     "@tiptap/starter-kit": "^3.8.0",
     "axios": "^1.12.2",
+    "date-fns": "^4.1.0",
     "dompurify": "^3.3.0",
     "lucide-react": "^0.344.0",
     "mongoose-paginate-v2": "^1.9.1",
